--- a/Poisson2D.ipynb
+++ b/Poisson2D.ipynb
@@ -55,11 +55,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to solve the 2D Poisson equation for a particular choice of the source term:\n",
+    "We want to solve the 2D Poisson equation for this source term:\n",
     "\\begin{equation}\n",
     "\\rho(x,y) = sin\\left( 6 \\pi \\frac{x}{L} \\right) sin\\left( 2 \\pi \\frac{y}{L}  \\right)\n",
     "\\end{equation}\n",
-    "whith $L=10$, using three methods: \n",
+    "whith $L=10$. We will use three methods: \n",
     "<li> analytical solution\n",
     "<li> spectral method \n",
     "<li> finite difference method"
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>For the given source term, it is easy to verify that the solution of the 2D Poisson equation is:\n",
+    "<p>For the aforementioned source term, it is easy to verify that the solution of the 2D Poisson equation is:\n",
     "\\begin{equation}\n",
     "V(x,y)=\\frac{L^2}{40\\pi^2} sin\\left( 6 \\pi \\frac{x}{L} \\right) sin\\left( 2 \\pi \\frac{y}{L}  \\right)\n",
     "\\end{equation}\n",
@@ -262,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define G vectors\n",
+    "# Define G vectors\n",
     "import numpy as np\n",
     "gx = np.fft.fftfreq(N,1/N) * 2*np.pi/L\n",
     "gy = np.fft.fftfreq(N,1/N) * 2*np.pi/L\n",
@@ -282,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Fourier transform rho \n",
+    "# Fourier transform rho \n",
     "import numpy as np \n",
     "Rrho = rho.astype(complex)\n",
     "Grho = np.fft.fftn(Rrho)\n",
@@ -415,6 +415,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-07726ed0749d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Define Delta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mDelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Delta = \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDelta\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Define Delta\n",
+    "Delta = x[1]-x[0]\n",
+    "print(\"Delta = \", Delta )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -432,17 +455,6 @@
     "    plt.plot(xA,listA,'ro-')\n",
     "    plt.xlabel('iteration')\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define Delta\n",
-    "Delta = x[1]-x[0]\n",
-    "print(\"Delta = \", Delta )"
    ]
   },
   {
