--- a/Poisson2D.ipynb
+++ b/Poisson2D.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<h1>Partial Differential Equations</h1>\n",
-    "<p>A partial differential equation (PDE) of the fucntion $u(x_1,\\dots,x_n)$ is an equation of the form:\n",
+    "<p>A partial differential equation (PDE) of the function $u(x_1,\\dots,x_n)$ is an equation of the form:\n",
     "\\begin{equation}\n",
     "    F\\big( \\underbrace{x_1,\\dots,x_n}_{\\text{variables}} , \\underbrace{u}_{\\text{function}}, \\underbrace{ \\frac{\\partial u}{\\partial x_1}, \\dots, \\frac{\\partial u}{\\partial x_n}}_{\\text{first derivatives}}, \\underbrace{ \\frac{\\partial^2 u}{\\partial x_1^2}, \\frac{\\partial^2 u}{\\partial x_1\\partial x_2}, \\dots }_{\\text{second derivatives}}, \\underbrace{\\dots}_{\\text{higher order derivatives}} \\big) = 0 \n",
     "\\end{equation}\n",
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "# method to plot a 3D function \n",
-    "def plot3D( X, Y, Z ) : \n",
+    "def plot3D( X, Y, Z ) :\n",
     "    from mpl_toolkits.mplot3d import Axes3D\n",
     "    import matplotlib.pyplot as plt\n",
     "    from matplotlib import cm\n",
@@ -266,6 +266,7 @@
     "import numpy as np\n",
     "gx = np.fft.fftfreq(N,1/N) * 2*np.pi/L\n",
     "gy = np.fft.fftfreq(N,1/N) * 2*np.pi/L\n",
+    "print(\"list of n\",np.fft.fftfreq(N,1/N))\n",
     "print(\"gx = \",gx)\n",
     "print(\"gy = \",gy)\n",
     "Gx, Gy = np.meshgrid(gx, gy)\n",
@@ -286,6 +287,7 @@
     "import numpy as np \n",
     "Rrho = rho.astype(complex)\n",
     "Grho = np.fft.fftn(Rrho)\n",
+    "print(Grho)\n",
     "print(\"Grho.real = \",Grho.real)\n",
     "print(\"Grho.imag = \",Grho.imag)"
    ]
@@ -415,21 +417,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-07726ed0749d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Define Delta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mDelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Delta = \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDelta\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define Delta\n",
     "Delta = x[1]-x[0]\n",
