--- a/Poisson2D.ipynb
+++ b/Poisson2D.ipynb
@@ -55,11 +55,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h3>Assignment</h3>\n",
     "We want to solve the 2D Poisson equation for this source term:\n",
     "\\begin{equation}\n",
     "\\rho(x,y) = sin\\left( 6 \\pi \\frac{x}{L} \\right) sin\\left( 2 \\pi \\frac{y}{L}  \\right)\n",
     "\\end{equation}\n",
-    "whith $L=10$. We will use three methods: \n",
+    "whith $L=10$. \n",
+    "<h3>Summary</h3>\n",
+    "We will use three methods: \n",
     "<li> analytical solution\n",
     "<li> spectral method \n",
     "<li> finite difference method"
@@ -217,6 +220,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h3>Check for understanding</h3> \n",
+    "<i>Q: How many periods are along the x and y direction?</i>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h1>Spectral method</h1>"
    ]
   },
@@ -293,6 +304,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Check for understanding</h3> \n",
+    "<i>Q: Why do we need to work with complex numbers?</i>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -315,12 +334,20 @@
    "source": [
     "# Solve Poisson equation in Fourier space\n",
     "GV = np.empty([N,N],dtype=complex)\n",
-    "GV[0,0] = 0.0 \n",
+    "GV[0,0] = 0.0 # arbitrary constant\n",
     "for j in range(N) : \n",
     "    for i in range(N) :\n",
     "        if( i != 0 or j!=0 ) : \n",
     "            GV[i,j] = Grho[i,j] / G2[i,j]\n",
     "print(\"GV = \",GV)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Check for understanding</h3> \n",
+    "<i>Q: Why is $V(\\mathbf{G}=0)$ arbitrary?</i>"
    ]
   },
   {
@@ -559,6 +586,14 @@
     "plot3D(X,Y,Vnew)\n",
     "list_max_new.append( maxAbsDiff(Vnew,Van) )\n",
     "plotMaxDiff(list_max_new,list_max)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Check for understanding</h3> \n",
+    "<i>Q: Why does the new method improve convergence?</i>"
    ]
   },
   {
