--- a/Poisson2D.ipynb
+++ b/Poisson2D.ipynb
@@ -321,9 +321,17 @@
     "for j in range(N) : \n",
     "    for i in range(N) : \n",
     "        if (abs(Grho[i,j].real) > 0.00001) : \n",
-    "            print('real',Gx[i,j]*L/(2.0*np.pi),Gy[i,j]*L/(2.0*np.pi),G2[i,j],Grho[i,j].real)\n",
+    "            print('real:',Grho[i,j].real,'n:',Gx[i,j]*L/(2.0*np.pi),'m:',Gy[i,j]*L/(2.0*np.pi))\n",
     "        if (abs(Grho[i,j].imag) > 0.00001) : \n",
-    "            print('imag',Gx[i,j]*L/(2.0*np.pi),Gy[i,j]*L/(2.0*np.pi),G2[i,j],Grho[i,j].imag)"
+    "            print('imag:',Grho[i,j].imag,'n:',Gx[i,j]*L/(2.0*np.pi),'m:',Gy[i,j]*L/(2.0*np.pi))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Check for understanding</h3> \n",
+    "<i>Q: Can you explain why we have both positive and negative values for $n$ and $m$?</i>"
    ]
   },
   {
